FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2021 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fre_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fre_tos_image_height"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="24dp"
        android:importantForAccessibility="no"
        android:src="@drawable/fre_product_logo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fre_welcome"
        android:layout_below="@id/fre_logo"
        style="@style/FreWelcomePageTitle" />

    <FrameLayout
        android:id="@+id/fre_browser_managed_by_organization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="16dp" >

        <include
            layout="@layout/fre_tos_privacy_disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/signin_fre_progress_spinner"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_gravity="center"
            android:layout_marginBottom="128dp"
            android:layout_width="32dp"
            android:layout_height="32dp"/>

        <LinearLayout
            android:id="@+id/signin_fre_selected_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <include layout="@layout/account_row" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/ic_expand_more_in_circle_24dp"
                android:importantForAccessibility="no" />
        </LinearLayout>

        <include
            android:id="@+id/signin_fre_continue_button"
            layout="@layout/account_picker_bottom_sheet_continue_button" />

        <org.chromium.ui.widget.ButtonCompat
            android:id="@+id/signin_fre_dismiss_button"
            style="@style/TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/signin_fre_dismiss_button" />

        <org.chromium.ui.widget.TextViewWithClickableSpans
            android:id="@+id/signin_fre_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.TextSmall.Secondary"
            android:text="@string/signin_fre_footer"
            app:leading="@dimen/text_size_small_leading" />
  </LinearLayout>
</RelativeLayout>